--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run linting
+        run : npm run lint
+      
       - name: Run Cypress tests with React server
         uses: cypress-io/github-action@v6
         with:
