--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/App.js src/components/NewUser.js src/components/UserRow.js"
+    "lint": "eslint src/App.js src/components/*.js"
   },
   "eslintConfig": {
     "extends": [
