--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Run linting
         run : npm run lint
         working-directory: frontend
+
+      - name: Run audit
+        run : npm audit
       
       - name: Run Cypress tests with React server
         uses: cypress-io/github-action@v6
