--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Run audit
         run : npm audit
+        working-directory: frontend
       
       - name: Run Cypress tests with React server
         uses: cypress-io/github-action@v6
