--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Run audit
         run : npm audit
         working-directory: frontend
+        continue-on-error: true
       
       - name: Run Cypress tests with React server
         uses: cypress-io/github-action@v6
