--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,3 +31,9 @@ jobs:
           start: npm start
           wait-on: 'http://localhost:3000'
           wait-on-timeout: 60
+
+      - name: Set up docker
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build Docker images
+        run : docker-compose up --build
