--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       
       - name: Build Docker images
-        run : docker-compose up --build
+        run : docker compose up --build
 
       - name: Run Cypress tests with React server
         uses: cypress-io/github-action@v6
